--- a/BlindBoxShop.Application/Pages/OrderFailed.razor
+++ b/BlindBoxShop.Application/Pages/OrderFailed.razor
@@ -79,9 +79,9 @@
                 <MudButton Variant="Variant.Text"
                            Color="Color.Default"
                            Size="Size.Large"
-                           Href="/"
-                           StartIcon="@Icons.Material.Filled.Home">
-                    Home
+                           Href="/shop"
+                           StartIcon="@Icons.Material.Filled.Store">
+                    Continue Shopping
                 </MudButton>
             </div>
         </div>
