--- a/BlindBoxShop.Application/Pages/Pages/PhysicalBlindBoxes.razor
+++ b/BlindBoxShop.Application/Pages/Pages/PhysicalBlindBoxes.razor
@@ -6,7 +6,7 @@
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="px-2 px-sm-4 mt-4">
     <!-- Hero Banner -->
     <MudPaper Elevation="0" Class="relative overflow-hidden rounded-xl mb-8" Style="height: 300px;">
-        <MudImage Src="https://www.popmart.com.my/cdn/shop/files/Banner_POP_MART_Box_Desktop.jpg?v=1692607089&width=2000" 
+        <MudImage Src="https://vending-cdn.kootoro.com/torov-cms/upload/image/1723016271998-L%C3%BD%20gi%E1%BA%A3i%20xu%20h%C6%B0%E1%BB%9Bng%20%C4%91%E1%BB%93%20ch%C6%A1i%20blind%20box%20%C4%91%C6%B0%E1%BB%A3c%20gi%E1%BB%9Bi%20tr%E1%BA%BB%20s%C4%83n%20%C4%91%C3%B3n.jpg" 
                 Alt="Physical BlindBox" Class="object-cover w-full h-full" Style="filter: brightness(0.8);" />
         <div class="absolute inset-0 flex flex-col items-center justify-center text-center p-4 bg-gradient-to-r from-cyan-900/50 to-teal-900/50">
             <MudText Typo="Typo.h2" Color="Color.Surface" Class="font-weight-bold mb-2 text-shadow">Physical BlindBoxes</MudText>
